--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,12 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.4</version>
     </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.12</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
